--- a/start/login.html
+++ b/start/login.html
@@ -8,7 +8,7 @@
     <title>Ingresar</title>
 </head>
 <body>
-    <script src="operation.js"></script>
+    <script src="script.js"></script>
 
     <div class="mx-auto shadow p-3 m-5 rounded w-50 text-center">
         <img src="https://i.pinimg.com/236x/9b/ee/e4/9beee4ede91c14d1f5adab5729c0af0f.jpg" alt="logo">
