--- a/start/login.html
+++ b/start/login.html
@@ -23,17 +23,16 @@
                 <div class="form-group">
                     <label>Correo</label>
                     <input type="text" name="username" class="form-control" placeholder="Su correo">
-                    <span class="invalid-feedback">Ingrese su correo</span>
                 </div>
+
                 <div class="form-group">
 
                     <label>Contraseña</label>
                     <input type="password" name="password" class="form-control" placeholder="Su contraseña">
-                    <span class="invalid-feedback">Ingrese su contraseña</span>
                 </div>
 
                 <div class="form-group">
-                    <input type="button" class="btn btn-primary" value="Ingresar">
+                    <input type="button" class="btn btn-primary login" value="Ingresar">
                 </div>
 
                 <p>¿No tienes una cuenta? <a href="register.html">Regístrate</a>.</p>
