lista de pacientes añadida

--- a/pacientes/list.html
+++ b/pacientes/list.html
@@ -8,11 +8,17 @@
     <title>Lista de Pacientes</title>
 </head>
 <body>
-    <h1>Bienvenido!</h1>
+    <div  class="mx-auto shadow p-3 m-5 rounded w-50 text-center">
+        <h1>¡Bienvenido!</h1>
 
-    <input type="button" class="btn btn-outline-danger logout" value="Salir de su sesión">
+        <input type="button" class="btn btn-outline-danger logout" value="Salir de su sesión">
+
+        <h4 class="text-left">Revise los perfiles de los pacientes</h4>
+    </div>
+
+    <div class="mx-auto shadow p-3 m-5 rounded w-50 text-center bg-info list"></div>
 
     <script type="module" src="admin.js"></script>
-    
+
 </body>
 </html>
