--- a/pacientes/list.html
+++ b/pacientes/list.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Lista de Pacientes</title>
+    
 </head>
 <body>
     <div  class="mx-auto shadow p-3 m-5 rounded w-50 text-center">
@@ -14,6 +15,8 @@
         <input type="button" class="btn btn-outline-danger logout" value="Salir de su sesión">
 
         <h4 class="text-left">Revise los perfiles de los pacientes</h4>
+
+        <input type="button" value="Crear un Nuevo Paciente" class="btn btn-outline-primary">
     </div>
 
     <div class="mx-auto shadow p-3 m-5 rounded w-50 text-center bg-info list"></div>
