ultima fase de desarrollo

--- a/pacientes/current.html
+++ b/pacientes/current.html
@@ -8,7 +8,10 @@
     <title>Paciente</title>
 </head>
 <body>
-    <div class="test mx-auto shadow p-3 m-5 rounded w-50 text-center bg-info"></div>
+    <div class="mx-auto shadow p-3 m-5 rounded w-50 text-center bg-info" id="current"></div>
+
+    <div class="mx-auto shadow p-3 m-5 rounded w-50 text-center bg-light" id="list"></div>
+
     <script type="module" src="search.js"></script>
 </body>
 </html>
