--- a/pacientes/list.html
+++ b/pacientes/list.html
@@ -23,8 +23,8 @@
         <h1>Cree un nuevo Paciente</h1>
 
         <form>
-            <input type="text" name="nombre" placeholder="nombre" class="form-control w-50">
-            <input type="number" name="edad" placeholder="edad" class="form-control w-50">
+            <input type="text" name="nombre" placeholder="nombre" class="form-control w-50 n-nombre">
+            <input type="number" name="edad" placeholder="edad" class="form-control w-50 n-edad">
 
             
                 <select id="sexo" class="form-control w-50">
@@ -48,7 +48,7 @@
                 </select>
             
 
-            <input type="button" value="Crear un Nuevo Paciente" class="btn btn-outline-primary">
+            <input type="button" value="Crear un Nuevo Paciente" class="btn btn-outline-primary crear">
             <input type="reset" value="Resetear los campos" class="btn btn-outline-warning">
         </form>  
 
