CRUD pacientes hecho

--- a/pacientes/current.html
+++ b/pacientes/current.html
@@ -39,7 +39,7 @@
                 </select>
             
 
-            <input type="button" value="Crear un Nuevo Paciente" class="btn btn-outline-primary crear">
+            <input type="button" value="Crear un Nuevo Paciente" class="btn btn-outline-primary act">
             <input type="reset" value="Resetear los campos" class="btn btn-outline-warning">
         </form>  
 
