--- a/pacientes/current.html
+++ b/pacientes/current.html
@@ -53,7 +53,7 @@
             <input type="text" name="descripcion" placeholder="descripcion" class="form-control w-50 n-des">
 
             
-                <select id="sexo" class="form-control w-50">
+                <select id="estado" class="form-control w-50">
                   <option selected>Estado</option>
                   <option>Pendiente</option>
                   <option>Realizado</option>
