--- a/pacientes/current.html
+++ b/pacientes/current.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -67,6 +67,11 @@
     </div>
 
     <div class="mx-auto shadow p-3 m-5 rounded w-50 text-center bg-light" id="list"></div>
+
+    <div class="mx-auto shadow p-3 m-5 rounded w-50 text-center bg-light">
+        <h4>Enviar Exámenes realizados por PDF al correo</h4>
+        <input type="button" value="Enviar" class="btn btn-outline-primary">
+    </div>
 
     <script type="module" src="search.js"></script>
 </body>
