--- a/pacientes/current.html
+++ b/pacientes/current.html
@@ -70,7 +70,7 @@
 
     <div class="mx-auto shadow p-3 m-5 rounded w-50 text-center bg-light">
         <h4>Enviar Exámenes realizados por PDF al correo</h4>
-        <input type="button" value="Enviar" class="btn btn-outline-primary">
+        <input type="button" value="Enviar" class="btn btn-outline-primary" id="pdf">
     </div>
 
     <script type="module" src="search.js"></script>
